--- a/build.gradle
+++ b/build.gradle
@@ -105,7 +105,7 @@ sonarqube {
         property "sonar.sourceEncoding", "UTF-8"
         property 'sonar.java.binaries', 'build/classes'
         property "sonar.test.inclusions", "**/*Test.java"
-//        property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+        property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
         property 'sonar.exclusions', '**/test/**, **/Q*.java, **/*Doc*.java, **/resources/**'
     }
 }
