--- a/bank-api/build.gradle
+++ b/bank-api/build.gradle
@@ -1,7 +1,17 @@
 dependencies {
+    implementation(project(":bank-member"))
+    implementation(project(":bank-common"))
+
+    testImplementation(testFixtures(project(":bank-member")))
+    testImplementation(testFixtures(project(":bank-common")))
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    runtimeOnly 'com.h2database:h2'
+
+    testImplementation 'io.rest-assured:rest-assured'
 }
 
 tasks.register("prepareKotlinBuildScriptModel") {}
