--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,5 @@ rootProject.name = 'alone-toy-bank'
 
 include 'bank-api'
 include 'bank-member'
-include 'bank-h2'
+include 'bank-common'
 include 'bank-mysql'
