--- a/bank-api/build.gradle
+++ b/bank-api/build.gradle
@@ -12,6 +12,10 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
 
     testImplementation 'io.rest-assured:rest-assured'
+
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 }
 
 tasks.register("prepareKotlinBuildScriptModel") {}
