feat : 로그인 회원 정보조회 및 테스트 코드 구현

--- a/bank-api/src/main/resources/application.yml
+++ b/bank-api/src/main/resources/application.yml
@@ -16,3 +16,7 @@ spring:
   h2:
     console:
       enabled: true
+
+token:
+  secret: 8sknjlO3NPTBqo319DHLNqsQAfRJEdKsETOds
+  expiration-time: 3600000
